--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 .input-section {
     flex: 70%;
     background-color: var(--color-secondary);
-    border: 1px solid #000;
+    border: 2px solid #000;
     border-radius: 64px 64px 0 0;
     display: flex;
     flex-direction: column;
@@ -89,8 +89,10 @@ body {
 }
 
 .button-container {
-    width: 300px;
+    width: auto;
     justify-content: center;
+    display: flex;
+    gap: 10px;
 }
 
 /* Estilos de entrada de texto */
@@ -152,11 +154,11 @@ ul {
     color: var(--color-white);
     background-color: var(--color-button);
     font-size: 16px;
-    margin-bottom: 18px;
+    /*margin-bottom: 18px;*/
 }
 
 .button-draw img {
-    margin-right: 40px;
+    margin-right: 20px;
 }
 
 .button-draw:hover {
@@ -169,6 +171,7 @@ ul {
     align-items: center;
     justify-content: center;
     width: 100%;
+    padding: 10px 40px;
     color: var(--color-white);
     background-color: var(--color-primary);
     font-size: 16px;
